src/test/ui/allocator/allocator-args.stderr
error: malformed `global_allocator` attribute input
  --> $DIR/allocator-args.rs:11:1
   |
LL | #[global_allocator(malloc)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[global_allocator]`

error: aborting due to previous error

